# pbls

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: release.yml  rust.yml
src/: file.rs  lib.rs  main.rs  protoc.rs  workspace.rs
testdata/: .pbls.toml  grpc.proto  simple.proto
testdata/folder/: what.proto
tests/: integration_test.rs
