[package]
name = "pbls"
version = "1.0.6"
edition = "2021"
license = "MIT"
description = "Protobuf Language Server"
homepage = "https://git.sr.ht/~rrc/pbls"
repository = "https://git.sr.ht/~rrc/pbls"
keywords = ["language-server", "protobuf", "lsp"]
categories = ["development-tools"]

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
lsp-types = "0.94"
lsp-server = "0.7"
toml = "0.8"
tree-sitter-protobuf = { git = "https://github.com/yusdacra/tree-sitter-protobuf", rev = "19c211a01434d9f03efff99f85e19f967591b175" }
tree-sitter = "0.20"
log = "0.4"
env_logger = { version = "0.10.1", default-features = false }
walkdir = "2.4"
regex = "1"
anyhow = "1.0"
tree-sitter-capnp = "1.5.0"

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.8"
